tests/baselines/reference/computedPropertyNames12_ES6(strict=true).errors.txt
computedPropertyNames12_ES6.ts(5,5): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
computedPropertyNames12_ES6.ts(5,5): error TS2564: Property '[s]' has no initializer and is not definitely assigned in the constructor.
computedPropertyNames12_ES6.ts(6,5): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
computedPropertyNames12_ES6.ts(7,12): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
computedPropertyNames12_ES6.ts(8,5): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
computedPropertyNames12_ES6.ts(9,5): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
computedPropertyNames12_ES6.ts(9,5): error TS2564: Property '[+s]' has no initializer and is not definitely assigned in the constructor.
computedPropertyNames12_ES6.ts(11,5): error TS2564: Property '[0]' has no initializer and is not definitely assigned in the constructor.
computedPropertyNames12_ES6.ts(12,5): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
computedPropertyNames12_ES6.ts(12,5): error TS2564: Property '[a]' has no initializer and is not definitely assigned in the constructor.
computedPropertyNames12_ES6.ts(13,12): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
computedPropertyNames12_ES6.ts(15,12): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.


==== computedPropertyNames12_ES6.ts (12 errors) ====
    var s: string;
    var n: number;
    var a: any;
    class C {
        [s]: number;
        ~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        ~~~
!!! error TS2564: Property '[s]' has no initializer and is not definitely assigned in the constructor.
        [n] = n;
        ~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        static [s + s]: string;
               ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        [s + n] = 2;
        ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        [+s]: typeof s;
        ~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        ~~~~
!!! error TS2564: Property '[+s]' has no initializer and is not definitely assigned in the constructor.
        static [""]: number;
        [0]: number;
        ~~~
!!! error TS2564: Property '[0]' has no initializer and is not definitely assigned in the constructor.
        [a]: number;
        ~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        ~~~
!!! error TS2564: Property '[a]' has no initializer and is not definitely assigned in the constructor.
        static [<any>true]: number;
               ~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        [`hello bye`] = 0;
        static [`hello ${a} bye`] = 0
               ~~~~~~~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
    }